shortlog up to date  (#179)
* Logo invoegen  (#173)

* logo test

* recompile

* xourselogo web uit global.css

* test logo

* test global css in SPC..?

* global.css weg

* 2.7.8 (zelfde als uitwiskeling repo)

* filepath logo .....

* nog een poging...

* update css

* update

* logo voor begin document 

Removed duplicate logo command and cleaned up whitespace.

* update global css

* geen animatie

* xourse logo ook in semester1.css

* Updates from Overleaf

* review vincent

* wetten van newton online

* fout uit figuur afgeschotenpijl

* Updates from Overleaf

* 174 inhoudsopgave toepassingen van Newton  (#176)

* Bestanden gravitie (folder golven -> dynamica)

* apparte bestanden voor hoodstuk toepassingen

* typo minipages pdf

* courses aangepast

* filepaths course

* Updates from Overleaf

* dynamica ECB (vincent)

* Tikz afbeeldingen tikz.net (#178)

* mathmodes aangepast + 3 afbeeldingen tikz.net

* tikzpictures

---------

Co-authored-by: Bart Lambregs <bart.lambregs@icloud.com>

--- a/dynamica/toep_dynamica_ECB.tex
+++ b/dynamica/toep_dynamica_ECB.tex
@@ -3,12 +3,83 @@
 %\addPrintStyle{..}
 
 \begin{document}
-	\author{Bart Lambregs}
+	\author{Bart Lambregs, Vincent Gellens}
 	\xmtitle{Dynamica van de ECB}{}
     \xmsource\xmuitleg
 
+Als je een massablok met een touwtje verbindt en vervolgens het blok - met touw in de hand - laat rondslingeren in een ECB, dan merk je dat het touw gespannen staat. Je voelt dat je met je hand (via het touw) een kracht op het blok moet zetten. Deze kracht wijst naar het middelpunt van de cirkelbaan. Zet je die kracht niet meer door het touwtje te lossen, dan vliegt het blok - bij gebrek aan die kracht - uit de cirkelbaan. Dit wijst erop dat (mogelijks) elke cirkelbaan alleen gemaakt kan worden als er een kracht naar het midden van de cirkel aanwezig is.
+
+FOTO OF AFBEELDING RONDSLINGERENDE MASSA AAN TOUW of HAMERSLINGERAAR?
+
+Wanneer een massa $m$ een eenparige cirkelbeweging maakt, raakt de richtingsveranderende snelheidsvector $\vec{v}$ aan de baan en wijst de versnellingsvector $\vec{a}$ naar het middelpunt van de cirkel. We laten nu de tweede wet van Newton ($\vec{F_r} = m\vec{a}$) hierop los. Aangezien de massa altijd positief is, zegt die uitdrukking dat resulterende kracht en versnelling dezelfde richting en zin moeten hebben. Dus ook zo in een ECB, de resulterende kracht op massa $m$ wijst naar het middelpunt van de cirkel. Als een voorwerp een ECB maakt, is de resulterende kracht een \emph{middelpuntzoekende} of \emph{centripetale kracht}.
+
+AFBEELDING MASSA in cirkelbaan met vectoren v, a en Fr
+
+\begin{remark}{De versnelling in een ECB is een normale versnelling. De middelpuntzoekende kracht veroorzaakt die en dus ook de richtingsverandering van de snelheid.}
+\end{remark}
+
+\begin{remark}
+	Wanneer de tweede wet van Newton wordt toegepast op een voorwerp dat een ECB maakt, kunnen we eerdere formules voor de (normale) versnelling in de ECB hanteren:
+\begin{equation}
+    \vec{a}_n=-\omega^2 \vec{r} \qquad 
+	a_n=r\omega^2=v\omega=\frac{v^2}{r}
+\end{equation}
+    
+\end{remark}
+
+\begin{remark} De middelpuntzoekende kracht is geen nieuwe krachtsoort. Het is (de samenstelling van) de werkelijke kracht(en) die op de massa aangrijpen. In het voorbeeld van de rondslingerende massa is de trekkracht de middelpuntzoekende kracht. In andere situaties kan een andere kracht(ensamenstelling) de rol van de middelpunzoekende kracht vervullen. (zie verder voor andere voorbeelden)
+\end{remark}
+
+\begin{remark} Misschien hoorde je ooit over de 'middelpuntvliedende' of 'centrifugale' kracht. Bekeken vanuit onze leefwereld bestaat die kracht in feite niet, het is hooguit een indruk die je hebt wanneer iets of iemand een cirkelbaan of bocht maakt. Je kan hooguit spreken over het \emph{middelpuntvliedend verschijnsel}. Bij gebrek (of verzwakking) van middelpuntzoekende kracht zal het voorwerp uit de oorspronkelijke cirkelbaan vliegen. Het voorwerp komt verder van het middelpunt terecht, maar hier is geen kracht aan het werk! Het is gewoon het traagheidsverschijnsel. Omdat het voorwerp reeds snelheid heeft, zal het voorwerp bij het verdwijnen van middelpuntzoekende (en dus resulterende) kracht een ERB maken. Dat zegt de eerste wet van Newton. Dit gebeurt als het touwtje uit vorig voorbeeld knapt (zie figuur).
+
+\end{remark}
+
+\footnote{De 'middelpuntvliedende kracht' wordt wetenschappelijk gezien als een schijnkracht op het voorwerp. Binnen een roterend assenstelsel dat met de ECB mee draait is het voorwerp eigenlijk in rust. Daarom moet binnen dat 'niet-inertiaalstelsel' de resulterende kracht op het voorwerp gelijk zijn aan nul. In combinatie met de middelpuntzoekende kracht naar binnen, moet er dan ook een middelpuntvliedende kracht naar buiten zijn die mekaar compenseren. Dit ervaar je bijvoorbeeld in een auto die een bocht neemt. De draaiende auto is voor jou de referentie en met die referentie ervaar je duidelijk een kracht naar buiten (die dan gecompenseerd moet worden door gordel of deur). Maar ten op zichte van de stilstaande weg is de kracht naar buiten er dus helemaal niet! De leerstof over versnellende assenstelsels en schijnkrachten behoort niet tot de leerstof van het middelbaar, maar bij deze dus al een leuke teaser voor wie zich wetenschappelijk wil verdiepen in het hoger onderwijs...}
+
+\begin{example}
+De looping \\
+Als je in een achtbaan een looping maakt, is de resultante van de zwaartekracht en de normaalkracht de middelpuntzoekende kracht. Merk op dat de zwaartekracht in elk punt van de looping hetzelfde is, maar dat de grootte, richting en/of zin van de normaalkracht verandert naargelang het punt van de looping. De resultante moet immers naar het middelpunt van de cirkelbaan wijzen. Indien de looping als een ECB verondersteld wordt, krijg je in het laagste en het onderste punt onderstaand krachtendiagram.\\
+
+FOTO LOOPING \\
+
+AFBEELDING LOOPING MET KRACHTEN IN HOOGSTE EN LAAGSTE PUNT \\
+
+\begin{quickquestion*}{}{}
+Waarom is in het laagste punt de normaalkracht groter dan de zwaartekracht?
+\end{quickquestion*}
+
+\begin{quickquestion*}{}{}
+Is in het hoogste punt de normaalkracht altijd kleiner dan de zwaartekracht?
+\end{quickquestion*}
+
+\begin{quickquestion*}{}{}
+Kan je een echte looping als een ECB beschouwen? Zoja, verklaar. Zoniet, waar is de middelpuntzoekende kracht dan groter, onderaan of bovenaan en waarom?
+\end{quickquestion*}
+
+\end{example}
+
+\begin{example}
+De carrousel \\
+In de carrousel zit je in een stoeltje verbonden aan één of meerdere touwen die door een extern mechanisme een draaibeweging maken. Hierdoor maak jij met het stoeltje een ECB in een horizontaal vlak. Jij en het stoeltje samen ondervinden twee krachten: de trekkracht van het touw en de zwaartekracht. De trekkracht kan ontbonden worden in een horizontale en een verticale component. De verticale component compenseert de zwaartekracht omdat je in verticale richting niet versnelt. In horizontale richting versnel je wel, naar het middelpunt van de cirkel. De middelpuntzoekende kracht is dus de horizontale component van de trekkracht.
+\\
+
+FOTO CARROUSEL \\
+
+AFBEELDING CARROUSEL MET KRACHTEN
 
 
+
+\end{example}
+
+\begin{example}
+Auto in een bocht op een horizontaal wegdek \\
+Wanneer een auto een (cirkelvormige) bocht neemt op een horizontaal wegdek is de (schuif)wrijvingskracht de middelpuntzoekende kracht. Zie oefeningen voor mogelijke uitwerking.
+\end{example}
+
+\begin{example}
+Lorentzkracht op een bewegende lading \\
+Vorig leerjaar maakte je kennis met de Lorentzkracht, de kracht op een bewegende lading in een magneetveld. Deze kracht staat loodrecht op de snelheid en zorgt dus eveneens voor een normale versnelling. De Lorentzkracht zorgt altijd voor afbuiging en is bijgevolg altijd een middelpuntzoekende kracht.
+\end{example}
 	%%\newpage
 	
 \end{document}
