--- a/SPC/dynamica.tex
+++ b/SPC/dynamica.tex
@@ -1,5 +1,5 @@
 %\documentclass[12pt,numbers,noauthor,nooutcomes,wordchoicegiven]{xourse}
-\documentclass{xourse}
+\documentclass[handout]{xourse}
 
 %\addPrintStyle{.}
 
@@ -9,22 +9,24 @@
 
 \logo{xmPictures/nomlogo.png}
 
+\handouttrue 
+
 \begin{document}
 %	\setcounter{tocdepth}{2}
-    \xmtitle{Kinematica: tweedimensionale bewegingen}{}  
+    \xmtitle{Dynamica: De wetten van Newton}{}  
  
 
 \setcounter{part}{3}
 
-\part{Dynamica: De wetten van Newton}
+% \part{Dynamica: De wetten van Newton}
 
-\activitychapter{../dynamica/dynamica_intro.tex}
-\activitychapter{../dynamica/newton_eerste_wet.tex}
-\activitychapter{../dynamica/newton_tweede_wet.tex}
-\activitychapter{../dynamica/newton_derde_wet.tex}
-\activitychapter{../dynamica/exercises/oefeningen.tex} 
-\activitysection{../dynamica/exercises/denkvragen.tex}
-\activitysection{../dynamica/exercises/vraagstukken.tex}
+% \activitychapter{../dynamica/dynamica_intro.tex}
+% \activitychapter{../dynamica/newton_eerste_wet.tex}
+% \activitychapter{../dynamica/newton_tweede_wet.tex}
+% \activitychapter{../dynamica/newton_derde_wet.tex}
+% \activitychapter{../dynamica/exercises/oefeningen.tex} 
+% \activitysection{../dynamica/exercises/denkvragen.tex}
+% \activitysection{../dynamica/exercises/vraagstukken.tex}
 % \activitychapter{6dejaar/nwtn_oplossingsstrategie.tex}
 % \activitychapter{6dejaar/nwtn_historische_uitwijding.tex}
 
@@ -33,8 +35,23 @@
 
 \activitychapter{../dynamica/toep_intro.tex}
 \activitychapter{../dynamica/toep_algemeen.tex}
-%\activitychapter{../dynamica/toep_krachten.tex}
+
+\activitychapter{../dynamica/toep_krachten.tex}
+\activitysection{../dynamica/toep_krachten_normaalkracht.tex}
+\activitysection{../dynamica/toep_krachten_veerkracht.tex}
+\activitysection{../dynamica/toep_krachten_Archimedeskracht.tex}
+\activitysection{../dynamica/toep_krachten_gravitatie.tex}
+\activitysection{../dynamica/toep_krachten_Coulomb.tex}
+\activitysection{../dynamica/toep_krachten_Lorentz.tex}
+\activitysection{../dynamica/toep_krachten_kernkrachten.tex}
+\activitysection{../dynamica/toep_krachten_wrijving.tex}
+\activitysection{../dynamica/toep_krachten_trekkracht.tex}
+\activitysection{../dynamica/toep_krachten_gewicht.tex}
+
+
+\activitychapter{../dynamica/toep_valversnelling.tex}
 \activitychapter{../dynamica/toep_dynamica_ECB.tex}
+\activitychapter{../dynamica/toep_satellietbanen.tex}
 
 
 \end{document}
