ingevoerde oef - probleem met verwijzingen naar oef in lib

--- a/dynamica/exercises/lib/dyn_ECB_I_1.tex
+++ b/dynamica/exercises/lib/dyn_ECB_I_1.tex
@@ -1,17 +1,8 @@
-
 \begin{exercise}
-
-% !TEX root = ../main.tex
-
-
-
- Een steen wordt aan een touwtje rondgeslingerd met een snelheid die in grootte constant is. 
-
+ Een steen wordt aan een touwtje rondgeslingerd met een snelheid die in grootte constant is.
 \begin{enumerate}
 	\item\pt{2}Heeft de steen een versnelling?
 	\item\pt{2}Ondervindt de steen een resulterende kracht?
 \end{enumerate}
-
-Leg uit.
-
+%Leg uit.
 \end{exercise}
