--- a/SPC/dynamica.tex
+++ b/SPC/dynamica.tex
@@ -1,5 +1,5 @@
 %\documentclass[12pt,numbers,noauthor,nooutcomes,wordchoicegiven]{xourse}
-\documentclass[handout]{xourse}
+\documentclass{xourse}
 
 %\addPrintStyle{.}
 
@@ -9,7 +9,7 @@
 
 \logo{xmPictures/nomlogo.png}
 
-\handouttrue 
+%\handouttrue 
 
 \begin{document}
 %	\setcounter{tocdepth}{2}
@@ -33,25 +33,27 @@
 
 \part{Toepassing wetten van Newton}
 
-\activitychapter{../dynamica/toep_intro.tex}
-\activitychapter{../dynamica/toep_algemeen.tex}
+% \activitychapter{../dynamica/toep_intro.tex}
+% \activitychapter{../dynamica/toep_algemeen.tex}
 
-\activitychapter{../dynamica/toep_krachten.tex}
-\activitysection{../dynamica/toep_krachten_normaalkracht.tex}
-\activitysection{../dynamica/toep_krachten_veerkracht.tex}
-\activitysection{../dynamica/toep_krachten_Archimedeskracht.tex}
-\activitysection{../dynamica/toep_krachten_gravitatie.tex}
-\activitysection{../dynamica/toep_krachten_Coulomb.tex}
-\activitysection{../dynamica/toep_krachten_Lorentz.tex}
-\activitysection{../dynamica/toep_krachten_kernkrachten.tex}
-\activitysection{../dynamica/toep_krachten_wrijving.tex}
-\activitysection{../dynamica/toep_krachten_trekkracht.tex}
-\activitysection{../dynamica/toep_krachten_gewicht.tex}
+% \activitychapter{../dynamica/toep_krachten.tex}
+% \activitysection{../dynamica/toep_krachten_normaalkracht.tex}
+% \activitysection{../dynamica/toep_krachten_veerkracht.tex}
+% \activitysection{../dynamica/toep_krachten_Archimedeskracht.tex}
+% \activitysection{../dynamica/toep_krachten_gravitatie.tex}
+% \activitysection{../dynamica/toep_krachten_Coulomb.tex}
+% \activitysection{../dynamica/toep_krachten_Lorentz.tex}
+% \activitysection{../dynamica/toep_krachten_kernkrachten.tex}
+% \activitysection{../dynamica/toep_krachten_wrijving.tex}
+% \activitysection{../dynamica/toep_krachten_trekkracht.tex}
+% \activitysection{../dynamica/toep_krachten_gewicht.tex}
 
+% \activitychapter{../dynamica/toep_valversnelling.tex}
+% \activitychapter{../dynamica/toep_dynamica_ECB.tex}
+% \activitychapter{../dynamica/toep_satellietbanen.tex}
 
-\activitychapter{../dynamica/toep_valversnelling.tex}
-\activitychapter{../dynamica/toep_dynamica_ECB.tex}
-\activitychapter{../dynamica/toep_satellietbanen.tex}
-
+\activitychapter{../dynamica/exercises/toep_oefeningen.tex}
+\activitysection{../dynamica/exercises/toep_vraagstukken.tex}
+\activitysection{../dynamica/exercises/toep_ECB.tex}
 
 \end{document}
