--- a/dynamica/exercises/lib/dyn_II_2.tex
+++ b/dynamica/exercises/lib/dyn_II_2.tex
@@ -1,52 +1,14 @@
 
 \begin{exercise}
-
- Een hockeyschijf of puck krijgt op een bevroren vijver een horizontale slag waardoor het met een snelheid van $20,5~\rm m/s$ vertrekt. Na hoeveel meter komt de puck tot rust als de wrijvingsfactor tussen de puck en het ijs 0,18 bedraagt? %Na $120~\rm m$ komt de puck tot rust. Bepaal de wrijvingsfactor.
+ Een doos van \SI{12}{kg} wordt losgelaten op een helling van \SI{20}{\degree} en glijdt met een versnelling van \SI{0,30}{m/s^2} hellingafwaarts. 
+\begin{enumerate}
+	\item\pt{1}Teken alle krachten die op de doos aangrijpen.
+	\item\pt{4}Hoe groot is de wrijvingskracht die de doos afremt?
+  	\item\pt{1}Hoe groot is de glijdende wrijvingscoëfficiënt?
+\end{enumerate}
 \begin{oplossing}
-\begin{figure}[h]
-\begin{center}
-\includegraphics[width=0.5\textwidth ,angle=0]{dyn/exercises/hockeypuck2}
-\end{center}
-\end{figure}
-
-\textit{gegeven}
-\begin{tabular}[t]{lcl}
-$v_0$ &$=$& $20,5~\rm m/s$\\
-$x$ &$=$& $120~\rm m$\\
-\end{tabular}
-
-\textit{gevraagd}
-$\mu$
-
-\textit{oplossing}
-De wrijvingskracht is de enige kracht volgens de horizontale
-richting en vormt dus de resulterende kracht. Omdat ze tegengesteld
-is aan de $x$-as geldt $F_{w,x}=-F_w$. Met $F_w=\mu F_n$ vinden we
-voor de versnelling:
-\begin{eqnarray}
--F_w &=& ma\nonumber\\
-&\Downarrow& \nonumber\\
--\mu mg &=&ma\nonumber\\
-&\Updownarrow& \nonumber\\
-a &=& -\mu g\label{a}
-\end{eqnarray}
-De tijd uit de vergelijkingen voor een EVRB elimineren, waarbij de
-eindsnelheid $v$ en de beginpositie $x_0$ nul zijn, levert:
-\begin{eqnarray}
-v&=&v_0+at\nonumber\\
-x&=&x_0+v_0t+\frac{1}{2}at^2\nonumber\\
-&\Downarrow&\nonumber\\
-0&=&v_0+at\Leftrightarrow t=-\frac{v_0}{a}\nonumber\\
-x&=&v_0\left(-\frac{v_0}{a}\right)+\frac{1}{2}a\left(-\frac{v_0}{a}\right)^2\nonumber\\
-&\Downarrow&\nonumber\\
-a&=&-\frac{v_0^2}{2x}\label{-v_0^2/2x}
-\end{eqnarray}
-Vergelijking (\ref{-v_0^2/2x}) samen met (\ref{a}) levert dan:
-\begin{eqnarray}
-\mu &=& \frac{v_0^2}{2gx}\label{remvgl}\\
-&&\nonumber\\
-&=& 0,178\nonumber
-\end{eqnarray}
+	$F_w=m(g\sin{\alpha}-a)=\SI{36,7}{N}$ 
+	\newline
+	$\mu=\frac{g\sin{\alpha}-a}{g\cos{\alpha}}=\SI{0,33}{}$
 \end{oplossing}
-
 \end{exercise}
