--- a/dynamica/toep_algemeen.tex
+++ b/dynamica/toep_algemeen.tex
@@ -7,8 +7,64 @@
 	\xmtitle{Algemeen (heuristiek)}{}
     \xmsource\xmuitleg
 
+	\section*{Werkwijze tweede wet van Newton toegepast op één voorwerp}
 
+	Hoewel de tweede wet van Newton een eenvoudige formule lijkt, is toepassing van deze wet niet altijd voor de hand liggend. Het is daarom van groot belang om bij omgang hiermee een grondige structuur en vaste werkwijze te hanteren. In principe kan de resulterende kracht zowel grafisch als kwantitatief altijd bepaald worden met behulp van het samenstellen van vectoren (kop/staart, parallellogrammethode, cosinusregel, Pythagoras, ...), maar in vele gevallen biedt het ontbinden van vectoren in componenten een eenvoudigere werkwijze. Deze methode wordt hieronder voorgedaan a.h.v.\ een voorbeeldoefening.
+	
+    \begin{example}
+	\textbf{Opgave}
 
-	%%\newpage
+	Een blokvormige massa van \SI{2,0}{kg} bevindt zich in de ruimte heel ver van eender welk hemellichaam. Op een bepaald ogenblik ondervindt de massa tegelijk drie verschillende trekkrachten waarvan de richtingen allemaal in hetzelfde vlak liggen. Door ons bekeken ondervindt de massa een verticaal neerwaartse kracht van \SI{7,0}{N}, een horizontale kracht van \SI{5,0}{N} naar links en een schuine kracht naar rechtsboven van \SI{8,0}{N}. Deze laatste kracht maakt een hoek van \ang{30} met de horizontale. Bepaal de grootte en richting van de versnelling die het blok dan ondervindt.
+	
+	\textbf{Werkwijze}
+	
+	\begin{enumerate}
+		\item Schrijf zorgvuldig je gegevens op en formuleer het gevraagde.
+		\item Maak een schets van het voorwerp en teken (indien mogelijk in verhouding) alle krachten die op het voorwerp aangrijpen. Stel jezelf hierbij de vraag: ``Welke krachten grijpen aan op het voorwerp?'' Overloop alle contactkrachten en eventuele veldkrachten (elektrisch/magnetisch, gravitatie, kern).
+		\item Plaats een orthogonaal x-y assenstelsel bij de figuur en probeer er voor te zorgen dat deze assen zoveel mogelijk samenvallen met de richtingen van de reeds afgebeelde krachten. Indien vooraf de richting van de versnelling kan bepaald worden, is het ook opportuun om één van de assen met die richting te laten samenvallen. In dit geval kan de versnellingsvector er ook bij geplaatst worden. Soms is dit vooraf echter niet mogelijk.
+		\item Ontbind alle krachten die niet samenvallen met de gekozen assen in twee componenten en geef deze logische namen.
+		\item Formuleer de tweede wet van Newton in vectoriële vorm en herschrijf de wet in scalaire vorm voor x- en y-richting.
+		\item Voor beide richtingen kan nu de wet toegepast worden op de aanwezige krachten. Schrijf de vergelijkingen op.
+		\item Werk de vergelijkingen uit naar het gevraagde.
+	\end{enumerate}
+	
+	(Indien de versnelling gevraagd wordt, bedoelt men natuurlijk de totale versnelling. Indien uit de vergelijkingen versnellingscomponenten voortvloeien, dienen ze samengesteld te worden conform de werkwijze gezien bij kinematica.)
+	
+	\textbf{Uitkomsten:} \SI{1,78}{m/s^2}; \ang{57,3} t.o.v.\ de horizontale.
+    \end{example}
+
+    \begin{denkvraag*}{Tweede voorbeeldopgave}
+	Een massa van \SI{5,0}{kg} schuift van een helling die een hoek van \ang{25} met de horizontale maakt. Het ondervindt hierbij een wrijvingskracht van \SI{12}{N}. Bepaal de groottes van versnelling en normaalkracht.
+    \begin{oplossing}
+    \textbf{Uitkomsten:} \SI{1,75}{m/s^2}; \SI{44,5}{N}
+    \end{oplossing}
+    \end{denkvraag*}
+	
+	Vergelijkbare oefeningen voor één voorwerp uit de extra oefeningenbundel op SmS: p.\ 11--15, oefeningen 10 en 11.
+	
+	\section*{Werkwijze wetten van Newton toegepast op meerdere voorwerpen tegelijk}
+	
+	Soms kan het voorkomen dat meerdere voorwerpen op elkaar krachten uitoefenen en samen versnellen, bijvoorbeeld wanneer voorwerpen met een touw verbonden zijn of tegen elkaar worden aangedrukt. Zo’n probleemstelling is op het eerste zicht moeilijker, maar indien een goede structuur en werkwijze gehanteerd wordt, komt het eigenlijk neer op meer vergelijkingen. De fysische complexiteit is eigenlijk dezelfde. Hierbij dient de onderstaande werkwijze gevolgd te worden:
+	
+	\begin{enumerate}
+		\item Maak een schets van de situatie als geheel.
+		\item Maak elk voorwerp vrij, dit wil zeggen: teken elk voorwerp nog eens apart.
+		\item Pas de werkwijze voor één voorwerp toe op elk voorwerp apart totdat je voor elk voorwerp een reeks vergelijkingen hebt.
+		\item Aangezien de voorwerpen op elkaar krachten uitoefenen, kan de derde wet van Newton hierop worden toegepast. Geef de actie-reactiekrachten met een gelijke grootte daarom een gemeenschappelijke naam.
+		\item Werk de reeks vergelijkingen uit naar het gevraagde.
+	\end{enumerate}
+	
+	\textbf{Opmerking:} In oefeningen waar een touw voorkomt, veronderstellen we dat het touw massaloos is. Dit rechtvaardigt dat een kracht aan één kant van het touw aan de andere kant in gelijke grootte waarneembaar is. Het touw vrijmaken heeft dan weinig zin, want als massaloos voorwerp wordt het probleemloos versneld. Ga er dus vanuit dat een gespannen touw aan beide kanten even hard trekt.
+	
+	Oefeningen uit de extra oefeningenbundel: p.\ 11--15, oefening 12.
+	
+    \begin{denkvraag*}{Extra moeilijke oefening}
+	Gegeven de opstelling zoals in de figuur. Gegeven is ook dat: $m_1 = \SI{3,0}{kg}$, $m_2 = \SI{7,0}{kg}$ en $\alpha = \ang{20}$. Bepaal de groottes van de versnelling van de blokken, de spankracht in het touw en de normaalkracht op blok 2. Verwaarloos alle wrijving en veronderstel het touw massaloos.
+	
+    \begin{oplossing}
+	\textbf{Uitkomsten:}
+    $(-) \SI{0,594}{m/s^2}$; \SI{27,6}{N}; \SI{64,5}{N}
+    \end{oplossing}
+    \end{denkvraag*}
 	
 \end{document}
