oefeningen newton toegepast zonder verwijzingen erin

--- a/SPC/dynamica.tex
+++ b/SPC/dynamica.tex
@@ -18,23 +18,24 @@
 
 \setcounter{part}{3}
 
-% \part{Dynamica: De wetten van Newton}
+\part{Dynamica: De wetten van Newton}
 
-% \activitychapter{../dynamica/dynamica_intro.tex}
-% \activitychapter{../dynamica/newton_eerste_wet.tex}
-% \activitychapter{../dynamica/newton_tweede_wet.tex}
-% \activitychapter{../dynamica/newton_derde_wet.tex}
-% \activitychapter{../dynamica/exercises/oefeningen.tex} 
-% \activitysection{../dynamica/exercises/denkvragen.tex}
-% \activitysection{../dynamica/exercises/vraagstukken.tex}
-% \activitychapter{6dejaar/nwtn_oplossingsstrategie.tex}
-% \activitychapter{6dejaar/nwtn_historische_uitwijding.tex}
+\activitychapter{../dynamica/dynamica_intro.tex}
+\activitychapter{../dynamica/newton_eerste_wet.tex}
+\activitychapter{../dynamica/newton_tweede_wet.tex}
+\activitychapter{../dynamica/newton_derde_wet.tex}
+\activitychapter{../dynamica/exercises/oefeningen.tex} 
+\activitysection{../dynamica/exercises/denkvragen.tex}
+\activitysection{../dynamica/exercises/vraagstukken.tex}
+
+%%% \activitychapter{6dejaar/nwtn_oplossingsstrategie.tex}
+%%% \activitychapter{6dejaar/nwtn_historische_uitwijding.tex}
 
 
-\part{Toepassing wetten van Newton}
+\part{De wetten van Newton toegepast}
 
-% \activitychapter{../dynamica/toep_intro.tex}
-% \activitychapter{../dynamica/toep_algemeen.tex}
+\activitychapter{../dynamica/toep_intro.tex}
+\activitychapter{../dynamica/toep_algemeen.tex}
 
 % \activitychapter{../dynamica/toep_krachten.tex}
 % \activitysection{../dynamica/toep_krachten_normaalkracht.tex}
@@ -48,9 +49,9 @@
 % \activitysection{../dynamica/toep_krachten_trekkracht.tex}
 % \activitysection{../dynamica/toep_krachten_gewicht.tex}
 
-% \activitychapter{../dynamica/toep_valversnelling.tex}
-% \activitychapter{../dynamica/toep_dynamica_ECB.tex}
-% \activitychapter{../dynamica/toep_satellietbanen.tex}
+\activitychapter{../dynamica/toep_valversnelling.tex}
+\activitychapter{../dynamica/toep_dynamica_ECB.tex}
+\activitychapter{../dynamica/toep_satellietbanen.tex}
 
 \activitychapter{../dynamica/exercises/toep_oefeningen.tex}
 \activitysection{../dynamica/exercises/toep_vraagstukken.tex}
