--- a/dynamica/toep_dynamica_ECB.tex
+++ b/dynamica/toep_dynamica_ECB.tex
@@ -9,11 +9,11 @@
 
 Als je een massablok met een touwtje verbindt en vervolgens het blok - met touw in de hand - laat rondslingeren in een ECB, dan merk je dat het touw gespannen staat. Je voelt dat je met je hand (via het touw) een kracht op het blok moet zetten. Deze kracht wijst naar het middelpunt van de cirkelbaan. Zet je die kracht niet meer door het touwtje te lossen, dan vliegt het blok - bij gebrek aan die kracht - uit de cirkelbaan. Dit wijst erop dat (mogelijks) elke cirkelbaan alleen gemaakt kan worden als er een kracht naar het midden van de cirkel aanwezig is.
 
-FOTO OF AFBEELDING RONDSLINGERENDE MASSA AAN TOUW of HAMERSLINGERAAR?
+%%FOTO OF AFBEELDING RONDSLINGERENDE MASSA AAN TOUW of HAMERSLINGERAAR? = in te voegen ...
 
 Wanneer een massa $m$ een eenparige cirkelbeweging maakt, raakt de richtingsveranderende snelheidsvector $\vec{v}$ aan de baan en wijst de versnellingsvector $\vec{a}$ naar het middelpunt van de cirkel. We laten nu de tweede wet van Newton ($\vec{F_r} = m\vec{a}$) hierop los. Aangezien de massa altijd positief is, zegt die uitdrukking dat resulterende kracht en versnelling dezelfde richting en zin moeten hebben. Dus ook zo in een ECB, de resulterende kracht op massa $m$ wijst naar het middelpunt van de cirkel. Als een voorwerp een ECB maakt, is de resulterende kracht een \emph{middelpuntzoekende} of \emph{centripetale kracht}.
 
-AFBEELDING MASSA in cirkelbaan met vectoren v, a en Fr
+%% AFBEELDING MASSA in cirkelbaan met vectoren v, a en Fr
 
 \begin{remark}{De versnelling in een ECB is een normale versnelling. De middelpuntzoekende kracht veroorzaakt die en dus ook de richtingsverandering van de snelheid.}
 \end{remark}
@@ -40,9 +40,9 @@ AFBEELDING MASSA in cirkelbaan met vectoren v, a en Fr
 De looping \\
 Als je in een achtbaan een looping maakt, is de resultante van de zwaartekracht en de normaalkracht de middelpuntzoekende kracht. Merk op dat de zwaartekracht in elk punt van de looping hetzelfde is, maar dat de grootte, richting en/of zin van de normaalkracht verandert naargelang het punt van de looping. De resultante moet immers naar het middelpunt van de cirkelbaan wijzen. Indien de looping als een ECB verondersteld wordt, krijg je in het laagste en het onderste punt onderstaand krachtendiagram.\\
 
-FOTO LOOPING \\
+%% FOTO LOOPING \\
 
-AFBEELDING LOOPING MET KRACHTEN IN HOOGSTE EN LAAGSTE PUNT \\
+%%AFBEELDING LOOPING MET KRACHTEN IN HOOGSTE EN LAAGSTE PUNT \\
 
 \begin{quickquestion*}{}{}
 Waarom is in het laagste punt de normaalkracht groter dan de zwaartekracht?
@@ -63,9 +63,9 @@ De carrousel \\
 In de carrousel zit je in een stoeltje verbonden aan één of meerdere touwen die door een extern mechanisme een draaibeweging maken. Hierdoor maak jij met het stoeltje een ECB in een horizontaal vlak. Jij en het stoeltje samen ondervinden twee krachten: de trekkracht van het touw en de zwaartekracht. De trekkracht kan ontbonden worden in een horizontale en een verticale component. De verticale component compenseert de zwaartekracht omdat je in verticale richting niet versnelt. In horizontale richting versnel je wel, naar het middelpunt van de cirkel. De middelpuntzoekende kracht is dus de horizontale component van de trekkracht.
 \\
 
-FOTO CARROUSEL \\
+%% FOTO CARROUSEL \\
 
-AFBEELDING CARROUSEL MET KRACHTEN
+%% AFBEELDING CARROUSEL MET KRACHTEN
 
 
 
