--- a/dynamica/toep_satellietbanen.tex
+++ b/dynamica/toep_satellietbanen.tex
@@ -8,7 +8,7 @@
     \xmsource\xmuitleg
 
 
-HET MATERIAAL BART UIT GRAVITATIE SATELLIETBANEN.TEX 
+%%% HET MATERIAAL BART UIT GRAVITATIE SATELLIETBANEN.TEX 
 
 %%%\section{Satellietbanen}
 
