oude afbeeldingen weg

--- a/dynamica/toep_krachten_Archimedeskracht.tex
+++ b/dynamica/toep_krachten_Archimedeskracht.tex
@@ -11,9 +11,9 @@
 
 
 
-\begin{image}  
-  \includegraphics{toep_archimedes}
-\end{image}
+% \begin{image}  
+%   \includegraphics{toep_archimedes}
+% \end{image}
 
 
 Eenvoorwerp dat volledig of gedeeltelijk ondergedompeld is in een vloeistof ondervindt vanwege de vloeistof een opwaartse stuwkracht verticaal omhoog. 
@@ -71,9 +71,9 @@ Speciaal geval: Heel vaak werken op een ondergedompeld voorwerp slechts twee kra
   ondergedompeld is) moet gelden dat \({\ F}_{A} = {\ F}_{z}\).
 \end{itemize}
 
-\begin{image}
-\includegraphics{toep_archimedes2}
-\end{image}
+% \begin{image}
+% \includegraphics{toep_archimedes2}
+% \end{image}
 
 
 Speciaal geval: ondergedompeld voorwerp ondervindt enkel \(\vec{F}_{A}\) en \(\vec{F}_{z}\).
@@ -137,7 +137,7 @@ Het ondergedompeld volume is ingekleurd.
     \draw[dashed] (-0.57*\W,\my) --++ (0.5*\W,0);
     \draw[{Latex[length=2.5,width=2.5]}-{Latex[length=2.5,width=2.5]}]
       (-0.55*\W,\h) --++ (0,{\my-\h}) node[midway,left=0] {$h_\mathrm{sub}$};
-    \draw[mass] (-\mw/2,\my) rectangle++ (\mw,\mh) node[midway,above=-5] {$m$};
+    \draw[mass] (-\mw/2,\my) rectangle++ (\mw,\mh) node[midway] {$m$};
     \draw[force] (0.30*\mw,\my+0.7*\mh) --++ (0,\F) node[below=4,right=0] {$\vbF_\mathrm{b}$};
     \draw[force] (-0.3*\mw,\my+0.2*\mh) --++ (0,-0.7*\F) node[above=2,left=0] {$m\vb{g}$};
     \draw[mydarkblue,dashed] (-\W/2,\h) --++ (\W,0);
