--- a/dynamica/toep_krachten_Coulomb.tex
+++ b/dynamica/toep_krachten_Coulomb.tex
@@ -19,9 +19,9 @@ is gelijk is aan:
 
 \[\vec{F}_{C}=\vec{F}_{e}=k\,\frac{|q_{1}|\,|q_{2}|}{r^{2}}\ \text{met}\ k=\SI{8,99e9}{\newton\meter\squared\per\coulomb\squared}\approx\SI{9,0e9}{\newton\meter\squared\per\coulomb\squared}\]
 
-\begin{image}
-  \includegraphics{toep_coulomb2}
-\end{image}
+% \begin{image}
+%   \includegraphics{toep_coulomb2}
+% \end{image}
 
 
 \begin{image}
