--- a/dynamica/toep_krachten_gravitatie.tex
+++ b/dynamica/toep_krachten_gravitatie.tex
@@ -13,9 +13,9 @@
 
 = aantrekkingskracht tussen massa's
 
-\begin{image}
-  \includegraphics{toep_coulomb}
-\end{image}
+% \begin{image}
+%   \includegraphics{toep_coulomb}
+% \end{image}
 
 De \textbf{grootte} van de gravitatiekracht \(\vec{F}_{G}\) tussen twee puntmassa's \(m_{1}\) en \(m_{2}\) met een afstand \(r\ \) tussenbeiden is gelijk is aan:
 
