--- a/dynamica/toep_krachten_normaalkracht.tex
+++ b/dynamica/toep_krachten_normaalkracht.tex
@@ -29,7 +29,7 @@ In sommige eenvoudige situaties kan het zijn dat \(F_{n} = F_{z}\), \textbf{maar
 		\ifthenelse{\boolean{showforces}}{
 		  \draw[->] (1.0*\w,0.5*\h) --++ (0,0.9*\h) node[below=4,right=0] {$y$};
 		  \draw[force] (-0.3*\w,0.0*\h) --++ (0, 1.4*\h) node[left] {$\vbF_\mathrm{N}$};
-		  \draw[force] ( 0.3*\w,0.5*\h) --++ (0,-1.4*\h) node[right=5,below=-3] {$\vbF_\mathrm{g} = -mg\vu{y}$};
+		  \draw[force] ( 0.3*\w,0.5*\h) --++ (0,-1.4*\h) node[right] {$\vbF_\mathrm{g} = -mg\vu{y}$};
 		  %\draw[force] (0,0.9*\h) --++ (0, 1.0*\h) node[left] {$\vbF_\mathrm{N}$};
 		  %\draw[force] (0,0.1*\h) --++ (0,-1.0*\h) node[right=5,below=-2] {$\vbF_\mathrm{g} = -mg\vu{y}$};
 		}{}
