--- a/dynamica/toep_krachten_veerkracht.tex
+++ b/dynamica/toep_krachten_veerkracht.tex
@@ -17,9 +17,9 @@ De waarde ervan is specifiek voor elke veer en is ook constant indien de veer en
 Ze drukt uit hoeveel Newton kracht de veer zet per meter dat de veer is verlengd/verkort t.o.v. de rustlengte.
 Ze zegt dus iets over de soepelheid of stijfheid van een veer.
 
-\begin{image}
-  \includegraphics{toep_veer}
-\end{image}
+% \begin{image}
+%   \includegraphics{toep_veer}
+% \end{image}
 
 Het gebeurt dat voor het symbool \(\mathcal{\mathrm{\Delta}l}\) het symbool \(x\) gebruikt wordt. 
 Dit is korter en dus eenvoudiger omdat de lengte van de veer ons meestal niet interesseert, enkel het verschil met de rustlengte. 
@@ -65,7 +65,13 @@ Descalaire getalcomponent (waarin met behulp van een gekozen x-as rekening wordt
   
 \end{tikzpicture}
 
+\end{image}
+\captionof{figure}{Een uitgerekte veer \protect \footnotemark}
+\footnotetext{\Tikzsource{https://tikz.net/category/physics/}{Izaak Neutelings}}
 
+
+
+\begin{image}
 % HORIZONTAL spring - axis, compressed
 \begin{tikzpicture}
   \def\H{1.1} % wall height
@@ -96,7 +102,7 @@ Descalaire getalcomponent (waarin met behulp van een gekozen x-as rekening wordt
   
 \end{tikzpicture}
 \end{image}
-\captionof{figure}{De veerkracht \protect \footnotemark}
+\captionof{figure}{Een ingedrukte veer \protect \footnotemark}
 \footnotetext{\Tikzsource{https://tikz.net/category/physics/}{Izaak Neutelings}}
 
 
