afbeeldingen dynamica ECB (vincent)

--- a/dynamica/toep_dynamica_ECB.tex
+++ b/dynamica/toep_dynamica_ECB.tex
@@ -11,11 +11,15 @@ Als je een massablok met een touwtje verbindt en vervolgens het blok - met touw 
 
 FOTO OF AFBEELDING RONDSLINGERENDE MASSA AAN TOUW of HAMERSLINGERAAR?
 
+
+
 Wanneer een massa $m$ een eenparige cirkelbeweging maakt, raakt de richtingsveranderende snelheidsvector $\vec{v}$ aan de baan en wijst de versnellingsvector $\vec{a}$ naar het middelpunt van de cirkel. We laten nu de tweede wet van Newton ($\vec{F_r} = m\vec{a}$) hierop los. Aangezien de massa altijd positief is, zegt die uitdrukking dat resulterende kracht en versnelling dezelfde richting en zin moeten hebben. Dus ook zo in een ECB, de resulterende kracht op massa $m$ wijst naar het middelpunt van de cirkel. Als een voorwerp een ECB maakt, is de resulterende kracht een \emph{middelpuntzoekende} of \emph{centripetale kracht}.
 
-AFBEELDING MASSA in cirkelbaan met vectoren v, a en Fr
-
-\begin{remark}{De versnelling in een ECB is een normale versnelling. De middelpuntzoekende kracht veroorzaakt die en dus ook de richtingsverandering van de snelheid.}
+\begin{image}[0.5\textwidth]
+	\includegraphics{2_massa_ECB_met_vectoren}
+\end{image}
+\begin{remark}
+	De versnelling in een ECB is een normale versnelling. De middelpuntzoekende kracht veroorzaakt die en dus ook de richtingsverandering van de snelheid.
 \end{remark}
 
 \begin{remark}
@@ -27,7 +31,8 @@ AFBEELDING MASSA in cirkelbaan met vectoren v, a en Fr
     
 \end{remark}
 
-\begin{remark} De middelpuntzoekende kracht is geen nieuwe krachtsoort. Het is (de samenstelling van) de werkelijke kracht(en) die op de massa aangrijpen. In het voorbeeld van de rondslingerende massa is de trekkracht de middelpuntzoekende kracht. In andere situaties kan een andere kracht(ensamenstelling) de rol van de middelpunzoekende kracht vervullen. (zie verder voor andere voorbeelden)
+\begin{remark} 
+	De middelpuntzoekende kracht is geen nieuwe krachtsoort. Het is (de samenstelling van) de werkelijke kracht(en) die op de massa aangrijpen. In het voorbeeld van de rondslingerende massa is de trekkracht de middelpuntzoekende kracht. In andere situaties kan een andere kracht(ensamenstelling) de rol van de middelpunzoekende kracht vervullen. (zie verder voor andere voorbeelden)
 \end{remark}
 
 \begin{remark} Misschien hoorde je ooit over de 'middelpuntvliedende' of 'centrifugale' kracht. Bekeken vanuit onze leefwereld bestaat die kracht in feite niet, het is hooguit een indruk die je hebt wanneer iets of iemand een cirkelbaan of bocht maakt. Je kan hooguit spreken over het \emph{middelpuntvliedend verschijnsel}. Bij gebrek (of verzwakking) van middelpuntzoekende kracht zal het voorwerp uit de oorspronkelijke cirkelbaan vliegen. Het voorwerp komt verder van het middelpunt terecht, maar hier is geen kracht aan het werk! Het is gewoon het traagheidsverschijnsel. Omdat het voorwerp reeds snelheid heeft, zal het voorwerp bij het verdwijnen van middelpuntzoekende (en dus resulterende) kracht een ERB maken. Dat zegt de eerste wet van Newton. Dit gebeurt als het touwtje uit vorig voorbeeld knapt (zie figuur).
@@ -40,9 +45,16 @@ AFBEELDING MASSA in cirkelbaan met vectoren v, a en Fr
 De looping \\
 Als je in een achtbaan een looping maakt, is de resultante van de zwaartekracht en de normaalkracht de middelpuntzoekende kracht. Merk op dat de zwaartekracht in elk punt van de looping hetzelfde is, maar dat de grootte, richting en/of zin van de normaalkracht verandert naargelang het punt van de looping. De resultante moet immers naar het middelpunt van de cirkelbaan wijzen. Indien de looping als een ECB verondersteld wordt, krijg je in het laagste en het onderste punt onderstaand krachtendiagram.\\
 
-FOTO LOOPING \\
+\begin{image}[0.5\textwidth]
+	\includegraphics{3_looping1}
+\end{image}
 
-AFBEELDING LOOPING MET KRACHTEN IN HOOGSTE EN LAAGSTE PUNT \\
+\begin{image}[0.5\textwidth]
+	\includegraphics{4_looping2}
+\end{image}
+
+
+
 
 \begin{quickquestion*}{}{}
 Waarom is in het laagste punt de normaalkracht groter dan de zwaartekracht?
@@ -58,26 +70,26 @@ Kan je een echte looping als een ECB beschouwen? Zoja, verklaar. Zoniet, waar is
 
 \end{example}
 
-\begin{example}
-De carrousel \\
+\begin{example}[De carrousel]
+
 In de carrousel zit je in een stoeltje verbonden aan één of meerdere touwen die door een extern mechanisme een draaibeweging maken. Hierdoor maak jij met het stoeltje een ECB in een horizontaal vlak. Jij en het stoeltje samen ondervinden twee krachten: de trekkracht van het touw en de zwaartekracht. De trekkracht kan ontbonden worden in een horizontale en een verticale component. De verticale component compenseert de zwaartekracht omdat je in verticale richting niet versnelt. In horizontale richting versnel je wel, naar het middelpunt van de cirkel. De middelpuntzoekende kracht is dus de horizontale component van de trekkracht.
-\\
 
-FOTO CARROUSEL \\
-
-AFBEELDING CARROUSEL MET KRACHTEN
-
-
+\begin{image}[0.5\textwidth]
+	\includegraphics{5_carrousel1}
+\end{image}
+\begin{image}[0.5\textwidth]
+	\includegraphics{6_carrousel2}
+\end{image}
 
 \end{example}
 
-\begin{example}
-Auto in een bocht op een horizontaal wegdek \\
+\begin{example}[Auto in een bocht op een horizontaal wegdek]
+
 Wanneer een auto een (cirkelvormige) bocht neemt op een horizontaal wegdek is de (schuif)wrijvingskracht de middelpuntzoekende kracht. Zie oefeningen voor mogelijke uitwerking.
 \end{example}
 
-\begin{example}
-Lorentzkracht op een bewegende lading \\
+\begin{example}[Lorentzkracht op een bewegende lading]
+
 Vorig leerjaar maakte je kennis met de Lorentzkracht, de kracht op een bewegende lading in een magneetveld. Deze kracht staat loodrecht op de snelheid en zorgt dus eveneens voor een normale versnelling. De Lorentzkracht zorgt altijd voor afbuiging en is bijgevolg altijd een middelpuntzoekende kracht.
 \end{example}
 	%%\newpage
