newton toegepast oefeningen invoegen (bart)
* ingevoerde oef - probleem met verwijzingen naar oef in lib

* oefeningen newton toegepast zonder verwijzingen erin

---------

Co-authored-by: Kwinten Obbels <github.com.pmn4c@passmail.net>

--- a/SPC/dynamica.tex
+++ b/SPC/dynamica.tex
@@ -1,5 +1,5 @@
 %\documentclass[12pt,numbers,noauthor,nooutcomes,wordchoicegiven]{xourse}
-\documentclass[handout]{xourse}
+\documentclass{xourse}
 
 %\addPrintStyle{.}
 
@@ -9,7 +9,7 @@
 
 \logo{xmPictures/nomlogo.png}
 
-\handouttrue 
+%\handouttrue 
 
 \begin{document}
 %	\setcounter{tocdepth}{2}
@@ -18,40 +18,43 @@
 
 \setcounter{part}{3}
 
-% \part{Dynamica: De wetten van Newton}
+\part{Dynamica: De wetten van Newton}
 
-% \activitychapter{../dynamica/dynamica_intro.tex}
-% \activitychapter{../dynamica/newton_eerste_wet.tex}
-% \activitychapter{../dynamica/newton_tweede_wet.tex}
-% \activitychapter{../dynamica/newton_derde_wet.tex}
-% \activitychapter{../dynamica/exercises/oefeningen.tex} 
-% \activitysection{../dynamica/exercises/denkvragen.tex}
-% \activitysection{../dynamica/exercises/vraagstukken.tex}
-% \activitychapter{6dejaar/nwtn_oplossingsstrategie.tex}
-% \activitychapter{6dejaar/nwtn_historische_uitwijding.tex}
+\activitychapter{../dynamica/dynamica_intro.tex}
+\activitychapter{../dynamica/newton_eerste_wet.tex}
+\activitychapter{../dynamica/newton_tweede_wet.tex}
+\activitychapter{../dynamica/newton_derde_wet.tex}
+\activitychapter{../dynamica/exercises/oefeningen.tex} 
+\activitysection{../dynamica/exercises/denkvragen.tex}
+\activitysection{../dynamica/exercises/vraagstukken.tex}
+
+%%% \activitychapter{6dejaar/nwtn_oplossingsstrategie.tex}
+%%% \activitychapter{6dejaar/nwtn_historische_uitwijding.tex}
 
 
-\part{Toepassing wetten van Newton}
+\part{De wetten van Newton toegepast}
 
 \activitychapter{../dynamica/toep_intro.tex}
 \activitychapter{../dynamica/toep_algemeen.tex}
 
-\activitychapter{../dynamica/toep_krachten.tex}
-\activitysection{../dynamica/toep_krachten_normaalkracht.tex}
-\activitysection{../dynamica/toep_krachten_veerkracht.tex}
-\activitysection{../dynamica/toep_krachten_Archimedeskracht.tex}
-\activitysection{../dynamica/toep_krachten_gravitatie.tex}
-\activitysection{../dynamica/toep_krachten_Coulomb.tex}
-\activitysection{../dynamica/toep_krachten_Lorentz.tex}
-\activitysection{../dynamica/toep_krachten_kernkrachten.tex}
-\activitysection{../dynamica/toep_krachten_wrijving.tex}
-\activitysection{../dynamica/toep_krachten_trekkracht.tex}
-\activitysection{../dynamica/toep_krachten_gewicht.tex}
-
+% \activitychapter{../dynamica/toep_krachten.tex}
+% \activitysection{../dynamica/toep_krachten_normaalkracht.tex}
+% \activitysection{../dynamica/toep_krachten_veerkracht.tex}
+% \activitysection{../dynamica/toep_krachten_Archimedeskracht.tex}
+% \activitysection{../dynamica/toep_krachten_gravitatie.tex}
+% \activitysection{../dynamica/toep_krachten_Coulomb.tex}
+% \activitysection{../dynamica/toep_krachten_Lorentz.tex}
+% \activitysection{../dynamica/toep_krachten_kernkrachten.tex}
+% \activitysection{../dynamica/toep_krachten_wrijving.tex}
+% \activitysection{../dynamica/toep_krachten_trekkracht.tex}
+% \activitysection{../dynamica/toep_krachten_gewicht.tex}
 
 \activitychapter{../dynamica/toep_valversnelling.tex}
 \activitychapter{../dynamica/toep_dynamica_ECB.tex}
 \activitychapter{../dynamica/toep_satellietbanen.tex}
 
+\activitychapter{../dynamica/exercises/toep_oefeningen.tex}
+\activitysection{../dynamica/exercises/toep_vraagstukken.tex}
+\activitysection{../dynamica/exercises/toep_ECB.tex}
 
 \end{document}
