--- a/dynamica/toep_dynamica_ECB.tex
+++ b/dynamica/toep_dynamica_ECB.tex
@@ -9,7 +9,7 @@
 
 Als je een massablok met een touwtje verbindt en vervolgens het blok - met touw in de hand - laat rondslingeren in een ECB, dan merk je dat het touw gespannen staat. Je voelt dat je met je hand (via het touw) een kracht op het blok moet zetten. Deze kracht wijst naar het middelpunt van de cirkelbaan. Zet je die kracht niet meer door het touwtje te lossen, dan vliegt het blok - bij gebrek aan die kracht - uit de cirkelbaan. Dit wijst erop dat (mogelijks) elke cirkelbaan alleen gemaakt kan worden als er een kracht naar het midden van de cirkel aanwezig is.
 
-FOTO OF AFBEELDING RONDSLINGERENDE MASSA AAN TOUW of HAMERSLINGERAAR?
+%%FOTO OF AFBEELDING RONDSLINGERENDE MASSA AAN TOUW of HAMERSLINGERAAR? = in te voegen ...
 
 
 
